examples/test/testpolicy16714.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16714
  namespace: namespace128
spec:
  podSelector:
    matchLabels:
      key16: value16
      key27: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value26
          key20: value26
      podSelector:
        matchLabels:
          key46: value2
